--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/jerry/Documents/GitHub/Newestversion/WebGL Builds;C:/Users/jerry/Documents/GitHub/csci526-fall24-friday-main-singularity-studio/WebGL Builds;D:/codeProjects/526/pair-prototype-group-4-super-awesomest-coolest-group/WebGL Builds;;;;;;;\"}"
+                "value": "{\"m_Value\":\"/Users/kasidetmeteeputthi/Documents/USC Classes/CSCI 526/Git/WebGL Builds/Gold V1;C:/Users/jerry/Documents/GitHub/Newestversion/WebGL Builds;C:/Users/jerry/Documents/GitHub/csci526-fall24-friday-main-singularity-studio/WebGL Builds;D:/codeProjects/526/pair-prototype-group-4-super-awesomest-coolest-group/WebGL Builds;;;;;;\"}"
             }
         ]
     }
